--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <p>Redeem channel points to join the:</p><h2 style="text-align: left;">✨Hall of Fame✨</h2><ul>
 <li>woods_beatle (x5)</li>
+<li>thiswontgowell (x2)</li>
 <li>eto__sovetskiy</li>
 <li>n0tchriis</li>
 <li>savethissw</li>
 <li>sswell</li>
-<li>thiswontgowell</li>
 <li>knukIes</li>
 <li>no2_luigi</li>
 <li>kwistna (not kristina)</li>
@@ -13,7 +13,8 @@
 <li>blesssd_</li>
 <li>lew73</li>
 <li>senseiblaze1</li>
-<li><br /></li>
+<li>talcha_</li>
+<li>ytxrdxrzx</li>
 <li><br /></li>
 <li><br /></li>
 <li><br /></li>
