--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <li>sswell</li>
 <li>knukIes</li>
 <li>no2_luigi</li>
-<li>kwistna (not kristina)</li>
+<li>kwistna</li>
 <li>coloradokicks</li>
 <li>beautoria</li>
 <li>blesssd_</li>
